--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.4.41",
+    "svix": "^1.24.0",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
