--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/modal": "^2.0.35",
+    "@nextui-org/react": "^2.4.1",
+    "@nextui-org/system": "^2.2.1",
+    "@nextui-org/theme": "^2.2.5",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -24,6 +28,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.2.10",
     "lucide-react": "^0.373.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
@@ -48,6 +53,13 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
-  }
+    "tailwindcss": "^3.4.4"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "author": "",
+  "license": "ISC"
 }
